--- a/styles/content-special.styl
+++ b/styles/content-special.styl
@@ -1,54 +1,36 @@
-/* Diagrams */
 .uml
   background-color #cdcdcd
   fill #cdcdcd !important
   border solid 0.2rem grey
+  width fit-content
   margin 1rem 1rem
   -webkit-padding-start 0
   padding 0
   li
     text-align center
-    font-size 2rem
     padding 0
     margin 0
+    span
+      padding 0 1rem
     ul
       padding: 0
       li
         text-align left
-        font-size 1.8rem
         list-style-type none
         margin 0
         padding 0 1rem
         min-height 1rem
         border-bottom unset
+        span
+          padding 0
         &:first-child
           border-top solid 0.2rem grey
-  &.small
-    li
-      font-size 1.7rem
-      ul li
-          font-size 1.5rem
-  &.very-small
-    li
-      font-size 1.4rem
-      ul li
-          font-size 1.2rem
   img 
     vertical-align 0
 
-  span.very-small
-    font-size 1.2rem
-
-
-.grayscale
-  filter grayscale(100%)
-
 table
-  color: #000000
-  // text-align: left
-  font-size: 1.6rem
-  &.small
-    font-size: 1.4rem
+  color #000000
+  margin 1rem
   p
     line-height 1.1
     margin 0
