--- a/styles/main.styl
+++ b/styles/main.styl
@@ -1,18 +1,17 @@
 @require "./variables"
+@require "./functions"
 @require "normalizecss/normalize.css"
 
 @require "./base"
 
 @require "./slide-default"
-@require "./slide-title"
-@require "./slide-demo"
-@require "./slide-speaker"
-@require "./slide-toc"
-
-@require "./content-special"
-@require "./content-position"
-@require "./svg"
-
-@require "./print"
+@require "./slide-special"
+@require "./text-size"
 
 @require "./slide-grid"
+@require "./content-special"
+@require "./content-position"
+
+@require "./svg"
+@require "./print"
+
