--- a/styles/slide-grid.styl
+++ b/styles/slide-grid.styl
@@ -1,35 +1,15 @@
-section
+section, .grid
   display grid
   grid-template-columns auto
   grid-template-rows min-content repeat(10,min-content)
-  grid-template-areas "title"
-  align-items start;
-  grid-gap 0 2rem
-  &.col-2
-    grid-template-columns repeat(2, calc(50% - 1rem))
-    grid-template-areas "title title" "c1 c2" "xxx xxx"
-  &.col-3
-    grid-template-columns repeat(3, calc(33% - 0.7rem))
-    grid-template-areas "title title title" "c1 c2 c3" "span span span"
-  &.col-1-2
-    grid-template-columns repeat(2, calc(50% - 1rem))
-    grid-template-areas "title title" "xxx xxx" "c1 c2"
-  .center
-    justify-self center
-    width 100%
-  .end
-    justify-self end
-  h2
-    grid-area title
-    align-self end
-    padding 1rem 1rem
-  .span
-    grid-area xxx
+  align-items start
+  row-gap 0
+  column-gap 2rem
+
+section
   &.title
-    grid-template-areas "title"
     grid-template-rows 20rem
     h1
-      grid-area title
       padding 0
       align-self end
     h2
@@ -37,3 +17,23 @@ section
       align-self center
   &.title.chapter
     grid-template-rows 20rem repeat(100, auto)
+
+.col-2
+  grid-template-columns repeat(2, 1fr)
+  h2
+    grid-column: 1 / span 2;
+.col-3
+  grid-template-columns repeat(3, 1fr)
+  h2
+    grid-column: 1 / span 3;
+.col-4
+  grid-template-columns repeat(4, 1fr)
+  h2
+    grid-column: 1 / span 4;
+
+.gap-0
+  column-gap 0
+  row-gap 0
+.gap-1
+  column-gap 1rem
+  row-gap 1rem
