--- a/styles/variables.styl
+++ b/styles/variables.styl
@@ -10,4 +10,12 @@ $footer-height = 7rem unless $footer-height is defined
 $hands-on-image = url(../images/misc/hands-on.svg) unless $hands-on-image is defined
 $hands-on-label = "Hands-on" unless $hands-on-label is defined
 
+$base-font-size = 3rem unless $base-font-size is defined
+$font-multiplier = 1.2  unless $font-multiplier is defined // Multiplier for big fonts, divider for small fonts
+$source-font-size = 0.6 * $base-font-size unless $source-font-size is defined
+$uml-font-size = 0.7 * $base-font-size unless $uml-font-size is defined
+$table-font-size = 0.7 * $base-font-size unless $table-font-size is defined
+$quote-font-size = 1.0 * $base-font-size unless $quote-font-size is defined
+$admonition-font-size = 1.0 * $base-font-size unless $admonition-font-size is defined
+
 $skip-classes = ".hide, .hidden" unless $skip-classes is defined
