--- a/module/styles/main.styl
+++ b/module/styles/main.styl
@@ -1,3 +1,4 @@
+@require "./variables-legacy"
 @require "./variables"
 @require "./functions"
 @require "normalizecss/normalize.css"
@@ -13,5 +14,6 @@
 @require "./content-position"
 
 @require "./svg"
-@require "./print"
 
+@require "./print"
+@require "./print-legacy"
