--- a/module/styles/variables.styl
+++ b/module/styles/variables.styl
@@ -19,3 +19,5 @@ $quote-font-size = 1.0 * $base-font-size unless $quote-font-size is defined
 $admonition-font-size = 1.0 * $base-font-size unless $admonition-font-size is defined
 
 $skip-classes = ".hide, .hidden" unless $skip-classes is defined
+
+$print-border = solid 2px black unless $print-border is defined
