Fix Title page with subtitle

--- a/module/styles/print.styl
+++ b/module/styles/print.styl
@@ -97,6 +97,8 @@ $notes-height-mm = $page-height-mm - $slide-height-mm - $top-margin-mm - $middle
       table
         p
           margin 0
+      .admonitionblock
+        font-size 1.5rem
 
   section.title
     background-color #efefef
