--- a/module/styles/slide-grid.styl
+++ b/module/styles/slide-grid.styl
@@ -15,6 +15,11 @@ section
     h2
       padding 0
       align-self center
+    header
+      align-self center
+      h3 
+        margin 0
+
   &.title.chapter
     grid-template-rows 20rem repeat(100, auto)
 
