Fix fit-content (for FF)

--- a/module/styles/content-special.styl
+++ b/module/styles/content-special.styl
@@ -2,7 +2,7 @@
   background-color #cdcdcd
   fill #cdcdcd !important
   border solid 0.2rem grey
-  width fit-content
+  width max-content
   margin 1rem 1rem
   -webkit-padding-start 0
   padding 0
