--- a/module/styles/slide-default.styl
+++ b/module/styles/slide-default.styl
@@ -76,7 +76,7 @@ pre.source
       background-color: #ffccff
 
   &.fit-content
-    width: fit-content
+    width: max-content
     padding-right: 2rem
 
 .quote
