Enable padding in source

--- a/module/styles/content-position.styl
+++ b/module/styles/content-position.styl
@@ -17,10 +17,11 @@ set-margin('.uml',bottom, 20)
 set-margin('pre.source',bottom, 20) 
 set-margin('.level2',bottom, 20) 
 
-set-padding(top, 5)
-set-padding(right, 5)
-set-padding(bottom, 5)
-set-padding(left, 5)
+set-padding('',top, 5)
+set-padding('',right, 5)
+set-padding('pre.source',right, 5)
+set-padding('',bottom, 5)
+set-padding('',left, 5)
 .padding-left-0
   ul
     padding-left 0
