--- a/module/styles/variables.styl
+++ b/module/styles/variables.styl
@@ -3,6 +3,10 @@ $screen-ratio-height = 9 unless $screen-ratio-height is defined
 $screen-ratio = $screen-ratio-width / $screen-ratio-height
 
 $color-text = #222222 unless $color-text is defined
+$title-color-text = #ffffff unless $title-color-text is defined
+$title-color-background = #4D668D unless $title-color-background is defined
+
+$header-image = url(../images/logo/sewatech-lite.svg) unless $header-image is defined
 
 $copyright = "© sewatech" unless $copyright is defined
 $footer-height = 7rem unless $footer-height is defined
