--- a/module/styles/slide-special.styl
+++ b/module/styles/slide-special.styl
@@ -1,6 +1,6 @@
 section.title
-  background-color #4D668D
-  color #ffffff
+  background-color $title-color-background
+  color $title-color-text
   text-align center
   h1, h2
     margin 0.6 auto
@@ -15,7 +15,7 @@ section.title
     padding 5rem 0 3rem 0
   .personname, .url
     display: none;
-  ul, li
+  > ul
     margin 0
     padding 0
     list-style none
