Remove Sewatech content

--- a/module/styles/variables.styl
+++ b/module/styles/variables.styl
@@ -6,9 +6,9 @@ $color-text = #222222 unless $color-text is defined
 $title-color-text = #ffffff unless $title-color-text is defined
 $title-color-background = #4D668D unless $title-color-background is defined
 
-$header-image = url(../images/logo/sewatech-lite.svg) unless $header-image is defined
+$header-image = url(../images/logo/bespoke-course-lite.svg) unless $header-image is defined
 
-$copyright = "© sewatech" unless $copyright is defined
+$copyright = "" unless $copyright is defined
 $footer-height = 7rem unless $footer-height is defined
 
 $hands-on-image = url(../images/misc/hands-on.svg) unless $hands-on-image is defined
@@ -21,6 +21,7 @@ $uml-font-size = 0.7 * $base-font-size unless $uml-font-size is defined
 $table-font-size = 0.7 * $base-font-size unless $table-font-size is defined
 $quote-font-size = 1.0 * $base-font-size unless $quote-font-size is defined
 $admonition-font-size = 1.0 * $base-font-size unless $admonition-font-size is defined
+$notes-multiplier = 0.7  unless $notes-multiplier is defined
 
 $skip-classes = ".hide, .hidden" unless $skip-classes is defined
 
