--- a/module/styles/functions.styl
+++ b/module/styles/functions.styl
@@ -23,7 +23,7 @@ set-width(parent)
       margin-right: auto;
 
 /* Font size */
-set-font-size(selector, font-size) 
+set-font-size-old(selector, font-size) 
   {selector}
     font-size font-size
     &.big
@@ -31,4 +31,15 @@ set-font-size(selector, font-size)
     &.small
       font-size (1 / $font-multiplier) * font-size
     &.very-small
+      font-size (1 / $font-multiplier / $font-multiplier) * font-size
+
+set-font-size(selector-prefix, selector-suffix, font-size) 
+  {selector-prefix}
+    {selector-suffix}
+      font-size font-size
+    &.big {selector-suffix}
+      font-size ($font-multiplier) * font-size
+    &.small {selector-suffix}
+      font-size (1 / $font-multiplier) * font-size
+    &.very-small {selector-suffix}
       font-size (1 / $font-multiplier / $font-multiplier) * font-size
