--- a/module/styles/slide-default.styl
+++ b/module/styles/slide-default.styl
@@ -173,14 +173,14 @@ aside[role=notes]
     top 0
     left 0
     z-index 100
-    font-size 1.5rem
+    // font-size 1.5rem
     margin-top 8rem
     padding 10%
     padding-top 2rem
     height 100%
     width: 100%
-    table
-      font-size 1rem
+    // table
+    //   font-size 1rem
   .title aside[role=notes]
     background-color $title-color-background
     margin-top 15rem
