--- a/module/styles/main.styl
+++ b/module/styles/main.styl
@@ -1,6 +1,6 @@
 @require "./variables"
 @require "./functions"
-@require "normalizecss/normalize.css"
+// @require "normalizecss/normalize.css"
 
 @require "./base"
 
