Fix print margin

--- a/module/styles/print.styl
+++ b/module/styles/print.styl
@@ -15,6 +15,8 @@ $slide-bottom-margin-mm = $page-height-mm - $slide-height-mm - $border-margin-mm
 $notes-height-mm = $page-height-mm - $slide-height-mm - $top-margin-mm - $middle-margin-mm - $bottom-margin-mm
 
 @media print
+  body 
+    margin 0
   .bespoke-parent, .bespoke-slide
     margin unset
     position relative
