Amélioration du support Docker

--- a/module/styles/base.styl
+++ b/module/styles/base.styl
@@ -25,7 +25,7 @@ html, body, h1, h2, ul, li
 article
   overflow hidden
   background-color #ccc
-  font-family "Roboto", sans-serif
+  font-family $font-family-base
   color $color-text
   font-feature-settings "kern" 1
   text-rendering optimizeLegibility
