--- a/module/styles/content-position.styl
+++ b/module/styles/content-position.styl
@@ -4,6 +4,7 @@ set-width('pre.source')
 
 set-margin('',top, 20) 
 set-margin('.uml',top, 20) 
+set-margin('.quote',top, 20) 
 set-margin('pre.source',top, 20) 
 set-margin('.level2',top, 20) 
 set-margin('',left, 20) 
