--- a/module/styles/variables.styl
+++ b/module/styles/variables.styl
@@ -23,6 +23,8 @@ $quote-font-size = 1.0 * $base-font-size unless $quote-font-size is defined
 $admonition-font-size = 1.0 * $base-font-size unless $admonition-font-size is defined
 $notes-multiplier = 0.7  unless $notes-multiplier is defined
 
+$font-family-base = "Arial", sans-serif
+
 $skip-classes = ".hide, .hidden" unless $skip-classes is defined
 
 $print-border = solid 2px black unless $print-border is defined
