--- a/module/styles/slide-grid.styl
+++ b/module/styles/slide-grid.styl
@@ -35,6 +35,10 @@ section
   grid-template-columns repeat(4, 1fr)
   h2
     grid-column: 1 / span 4;
+.col-21
+  grid-template-columns: 2fr 1fr
+  h2
+    grid-column: 1 / span 2
 
 .gap-0
   column-gap 0
