--- a/module/styles/slide-special.styl
+++ b/module/styles/slide-special.styl
@@ -74,6 +74,9 @@ section
     background-position center center
     background-repeat no-repeat
     background-size 40%
+  &.hands-on-full:hover aside[role=notes]
+    display block
+    margin-top 0
 
   &.hands-on:after
     height $footer-height
