--- a/module/styles/main.styl
+++ b/module/styles/main.styl
@@ -11,6 +11,7 @@
 @require "./slide-grid"
 @require "./content-special"
 @require "./content-position"
+@require "./content-color"
 
 @require "./svg"
 
