Fix UML font-size

--- a/module/styles/text-size.styl
+++ b/module/styles/text-size.styl
@@ -18,6 +18,7 @@ ul, ol
       ul
         li
           font-size unit(1 / $font-multiplier, 'em')
+set-font-size('div', 'ul li', $base-font-size)
 set-font-size('ul', 'li', $base-font-size)
 set-font-size('div', 'ol li', 1em) 
 
@@ -27,13 +28,10 @@ set-font-size('pre.source  ', '', $source-font-size)
 pre.source code
   font-size 1em
 
-set-font-size('.uml', '', $uml-font-size) 
-set-font-size('.uml li span', '', $uml-font-size * 0.9) 
-set-font-size('.uml', 'li span', $uml-font-size * 0.9) 
-set-font-size('.uml li li span', '', $uml-font-size * 0.8) 
-set-font-size('aside[role=notes] .uml li span', '', $uml-font-size * $notes-multiplier)
-set-font-size('aside[role=notes] .uml', 'li span', $uml-font-size * $notes-multiplier)
-set-font-size('aside[role=notes] .uml li li span', '', $uml-font-size * $notes-multiplier * 0.9)
+set-font-size('.uml', 'li', $uml-font-size) 
+set-font-size('.uml', 'li li', $uml-font-size * 0.9) 
+set-font-size('aside[role=notes] .uml', 'li', $uml-font-size * $notes-multiplier)
+set-font-size('aside[role=notes] .uml', 'li li', $uml-font-size * $notes-multiplier * 0.9)
 
 set-font-size('p', '', $base-font-size) 
 set-font-size('div', 'p', $base-font-size) 
