--- a/module/styles/variables.styl
+++ b/module/styles/variables.styl
@@ -16,10 +16,9 @@ $hands-on-label = "Hands-on" unless $hands-on-label is defined
 
 $base-font-size = 3rem unless $base-font-size is defined
 $font-multiplier = 1.2  unless $font-multiplier is defined // Multiplier for big fonts, divider for small fonts
-$source-font-size = 0.6 * $base-font-size unless $source-font-size is defined
-$uml-font-size = 0.7 * $base-font-size unless $uml-font-size is defined
+$source-font-size = 0.55 * $base-font-size unless $source-font-size is defined
 $table-font-size = 0.7 * $base-font-size unless $table-font-size is defined
-$quote-font-size = 1.0 * $base-font-size unless $quote-font-size is defined
+$quote-font-size = 0.8 * $base-font-size unless $quote-font-size is defined
 $admonition-font-size = 1.0 * $base-font-size unless $admonition-font-size is defined
 $notes-multiplier = 0.7  unless $notes-multiplier is defined
 
@@ -28,3 +27,7 @@ $font-family-base = "Arial", sans-serif
 $skip-classes = ".hide, .hidden" unless $skip-classes is defined
 
 $print-border = solid 2px black unless $print-border is defined
+
+$uml-font-size = 0.5 * $base-font-size unless $uml-font-size is defined
+$uml-color-background = #ffdc64 unless $uml-color-background is defined
+$uml-color-border = #808080 unless $uml-color-border is defined
