--- a/module/styles/content-color.styl
+++ b/module/styles/content-color.styl
@@ -1,9 +1,22 @@
 .grayscale
   filter grayscale(100%)
 
-.text-red
-  color: red
-.text-grey
-  color grey 
-.text-litered
-    color #ee9999 
+set-text-color('red', red) 
+set-text-color('pink', pink) 
+set-text-color('grey', grey) 
+set-text-color('blue', blue) 
+set-text-color('green', green) 
+set-text-color('orange', #ff8c00) 
+set-text-color('purple', #800080) 
+
+set-background-color('red', red)
+set-background-color('litered', #ee9999) 
+set-background-color('pink', pink)
+set-background-color('grey', grey)
+set-background-color('litegrey', #d3d3d3)
+set-background-color('blue', blue)
+set-background-color('liteblue', #add8e6)
+set-background-color('green', green) 
+set-background-color('litegreen', #90ee90) 
+set-background-color('orange', orange) 
+set-background-color('liteyellow', #ffffe0) 
