--- a/module/styles/slide-grid.styl
+++ b/module/styles/slide-grid.styl
@@ -39,6 +39,10 @@ section
   grid-template-columns: 2fr 1fr
   h2
     grid-column: 1 / span 2
+.col-12
+  grid-template-columns: 1fr 2fr
+  h2
+    grid-column: 1 / span 2
 .col-211
   grid-template-columns: 2fr 1fr 1fr
   h2
